--- a/ifood/cadastro/src/main/resources/application.properties
+++ b/ifood/cadastro/src/main/resources/application.properties
@@ -1,7 +1,17 @@
-quarkus.datasource.url=jdbc:mariadb://localhost:5432/postgres
-quarkus.datasource.driver=org.postgresql.Driver
+#quarkus.datasource.url=jdbc:mariadb://localhost:5432/postgres
+#quarkus.datasource.driver=org.postgresql.Driver
+#quarkus.datasource.username=cadastro
+#quarkus.datasource.password=cadastro
+#quarkus.hibernate-orm.database.generation=drop-and-create
+
+quarkus.datasource.db-kind=postgresql 
 quarkus.datasource.username=cadastro
 quarkus.datasource.password=cadastro
+
+quarkus.datasource.reactive.url=jdbc:mariadb://localhost:5432/postgres
+quarkus.datasource.reactive.max-size=20
 quarkus.hibernate-orm.database.generation=drop-and-create
+
+
 
 quarkus.hibernate-orm.dialect=org.hibernate.dialect.PostgreSQL10Dialect
