--- a/ifood/cadastro/pom.xml
+++ b/ifood/cadastro/pom.xml
@@ -10,13 +10,13 @@
     <maven.compiler.parameters>true</maven.compiler.parameters>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
+    <org.mapstruct.version>1.3.1.Final</org.mapstruct.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
     <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
     <quarkus.platform.version>2.1.1.Final</quarkus.platform.version>
     <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
-    <org.mapstruct.version>1.3.1.Final</org.mapstruct.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -60,6 +60,10 @@
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-smallrye-jwt</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
       <artifactId>quarkus-junit5</artifactId>
       <scope>test</scope>
     </dependency>
@@ -68,65 +72,53 @@
       <artifactId>rest-assured</artifactId>
       <scope>test</scope>
     </dependency>
-
-    <!--Dependências para teste do curso  -->
     <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>postgresql</artifactId>
       <scope>test</scope>
     </dependency>
-    
     <dependency>
       <groupId>com.github.database-rider</groupId>
       <artifactId>rider-core</artifactId>
       <version>1.13.0</version>
       <scope>test</scope>
     </dependency>
-    
     <dependency>
       <groupId>com.github.database-rider</groupId>
       <artifactId>rider-cdi</artifactId>
       <version>1.13.0</version>
       <scope>test</scope>
     </dependency>
-    
     <dependency>
       <groupId>stax</groupId>
       <artifactId>stax</artifactId>
       <version>1.2.0</version>
       <scope>test</scope>
     </dependency>
-    
     <dependency>
       <groupId>com.approvaltests</groupId>
       <artifactId>approvaltests</artifactId>
       <version>4.0.2</version>
       <scope>test</scope>
     </dependency>
-    
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
       <version>2.8.6</version>
       <scope>test</scope>
     </dependency>
-    <!-- fim das dependências de teste -->
-    
-    <!--  dependências extras -->
     <dependency>
-	  <groupId>org.mapstruct</groupId>
-	  <artifactId>mapstruct</artifactId>
-	  <version>${org.mapstruct.version}</version>
-	  <scope>provided</scope>
-	</dependency>
-	
-	<dependency>
-	  <groupId>org.mapstruct</groupId>
-	  <artifactId>mapstruct-processor</artifactId>
-	  <version>${org.mapstruct.version}</version>
-	  <scope>provided</scope>
-	</dependency>
-    
+      <groupId>org.mapstruct</groupId>
+      <artifactId>mapstruct</artifactId>
+      <version>${org.mapstruct.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mapstruct</groupId>
+      <artifactId>mapstruct-processor</artifactId>
+      <version>${org.mapstruct.version}</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
@@ -163,34 +155,26 @@
         </configuration>
       </plugin>
       <plugin>
-	    <groupId>org.apache.maven.plugins</groupId>
-	    <artifactId>maven-compiler-plugin</artifactId>
-	    <version>3.5.1</version>
-	    <configuration>
-	        <source>1.8</source>
-	        <target>1.8</target>
-	        <annotationProcessorPaths>
-	            <path>
-	                <groupId>org.mapstruct</groupId>
-	                <artifactId>mapstruct-processor</artifactId>
-	                <version>${org.mapstruct.version}</version>
-	            </path>
-	        </annotationProcessorPaths>
-	        <!-- due to problem in maven-compiler-plugin, for verbose mode add showWarnings -->
-	        <showWarnings>true</showWarnings>
-	        <compilerArgs>
-	            <arg>
-	                -Amapstruct.suppressGeneratorTimestamp=true
-	            </arg>
-	            <arg>
-	                -Amapstruct.suppressGeneratorVersionInfoComment=true
-	            </arg>
-	            <arg>
-	                -Amapstruct.verbose=true
-	            </arg>
-	        </compilerArgs>
-	    </configuration>
-	</plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.5.1</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+          <annotationProcessorPaths>
+            <path>
+              <groupId>org.mapstruct</groupId>
+              <artifactId>mapstruct-processor</artifactId>
+              <version>${org.mapstruct.version}</version>
+            </path>
+          </annotationProcessorPaths>
+          <showWarnings>true</showWarnings>
+          <compilerArgs>
+            <arg>-Amapstruct.suppressGeneratorTimestamp=true</arg>
+            <arg>-Amapstruct.suppressGeneratorVersionInfoComment=true</arg>
+            <arg>-Amapstruct.verbose=true</arg>
+          </compilerArgs>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
   <profiles>
