--- a/ifood/docker-compose.yml
+++ b/ifood/docker-compose.yml
@@ -4,9 +4,9 @@ services:
   keycloak_ifood:
     container_name: keycloak_ifood
     image: jboss/keycloak:14.0.0
-    environment:
-      KEYCLOAK_USER: admin
-      KEYCLOAK_PASSWORD: admin
+    #environment:
+    #  KEYCLOAK_USER: admin
+    #  KEYCLOAK_PASSWORD: admin
     ports:
       - "8180:8080"
   
@@ -18,8 +18,16 @@ services:
       POSTGRES_PASSWORD: cadastro
     ports:
       - "5432:5432"
-
   
-
-    
-  
+  jaeger_ifood:
+    container_name: jaeger_ifood
+    image: jaegertracing/all-in-one:1.25
+    ports:
+      - "5775:5775/udp"
+      - "6831:6831/udp"
+      - "6832:6832/udp"
+      - "5778:5778"
+      - "16686:16686"
+      - "14268:14268"
+      - "14250:14250"
+      - "9411:9411"
