Iniciando a programação reativa com multiny

--- a/ifood/cadastro/src/main/resources/application.properties
+++ b/ifood/cadastro/src/main/resources/application.properties
@@ -1,16 +1,11 @@
-#quarkus.datasource.url=jdbc:mariadb://localhost:5432/postgres
-#quarkus.datasource.driver=org.postgresql.Driver
-#quarkus.datasource.username=cadastro
-#quarkus.datasource.password=cadastro
-#quarkus.hibernate-orm.database.generation=drop-and-create
 
 quarkus.datasource.db-kind=postgresql 
 quarkus.datasource.username=cadastro
 quarkus.datasource.password=cadastro
 
-quarkus.datasource.reactive.url=jdbc:mariadb://localhost:5432/postgres
+quarkus.datasource.reactive.url=jdbc:postgresql://localhost:5432/postgres
 quarkus.datasource.reactive.max-size=20
-quarkus.hibernate-orm.database.generation=drop-and-create
+#quarkus.hibernate-orm.database.generation=update
 
 quarkus.hibernate-orm.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 
@@ -19,3 +14,11 @@ mp.jwt.verify.publickey=MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAnOqOond1N8Ym
 
 #%test.mp.jwt.verify.publickey=NONE
 #%test.mp.jwt.verify.publickey.location=publicKey.pem
+
+quarkus.jaeger.service-name=ifood-cadastro
+quarkus.jaeger.sampler-type=const
+quarkus.jaeger.sampler-param=1
+quarkus.jaeger.endpoint=http://localhost:14268/api/traces
+
+quarkus.flyway.clean-at-start=true
+quarkus.flyway.migrate-at-start=true
