--- a/ifood/docker-compose.yml
+++ b/ifood/docker-compose.yml
@@ -18,6 +18,15 @@ services:
       POSTGRES_PASSWORD: cadastro
     ports:
       - "5432:5432"
+
+  postgres_marketplace:
+    container_name: postgres_marketplace_ifood
+    image: postgres:12.2
+    environment:
+      POSTGRES_USER: marketplace
+      POSTGRES_PASSWORD: marketplace
+    ports:
+      - "5433:5432"
   
   jaeger_ifood:
     container_name: jaeger_ifood
@@ -31,3 +40,13 @@ services:
       - "14268:14268"
       - "14250:14250"
       - "9411:9411"
+
+  prometheus_ifood:
+    container_name: prometheus-ifood
+    image: prometheus-ifood
+    network_mode: "host"
+
+  grafana_ifood:
+    container_name: grafana-ifood
+    image: grafana/grafana:6.5.0
+    network_mode: "host"
