--- a/ifood/marketplace/pom.xml
+++ b/ifood/marketplace/pom.xml
@@ -41,15 +41,18 @@
 	    <groupId>io.quarkus</groupId>
 	    <artifactId>quarkus-resteasy-mutiny</artifactId>
     </dependency>
+    
+    <dependency>
+        <groupId>io.quarkus</groupId>
+        <artifactId>quarkus-flyway</artifactId>
+    </dependency>
+    
     <dependency>
 	    <groupId>io.quarkus</groupId>
 	    <artifactId>quarkus-jdbc-postgresql</artifactId>
     </dependency>
-        <dependency>
-        <groupId>io.quarkus</groupId>
-        <artifactId>quarkus-flyway</artifactId>
-    </dependency>
-        <dependency>
+    
+    <dependency>
         <groupId>io.quarkus</groupId>
         <artifactId>quarkus-reactive-pg-client</artifactId>
     </dependency>
@@ -58,6 +61,17 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-smallrye-jwt</artifactId>
     </dependency>
+    
+	<dependency>
+		<groupId>io.quarkus</groupId>
+		<artifactId>quarkus-resteasy-jsonb</artifactId>
+	</dependency>
+	
+	<dependency>
+		<groupId>io.quarkus</groupId>
+		<artifactId>quarkus-smallrye-openapi</artifactId>
+	</dependency>
+
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-junit5</artifactId>
