Ajustes no código

--- a/ifood/marketplace/pom.xml
+++ b/ifood/marketplace/pom.xml
@@ -71,6 +71,11 @@
 		<groupId>io.quarkus</groupId>
 		<artifactId>quarkus-smallrye-openapi</artifactId>
 	</dependency>
+	
+	<dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-smallrye-reactive-messaging-amqp</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>io.quarkus</groupId>
