--- a/ifood/marketplace/src/main/resources/application.properties
+++ b/ifood/marketplace/src/main/resources/application.properties
@@ -3,15 +3,22 @@ quarkus.http.port=8081
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=marketplace
 quarkus.datasource.password=marketplace
+
+#Tem que usar ambos datasource pois o flyway usa jdbc e não conexão reativa
 quarkus.datasource.reactive.url=postgresql://localhost:5433/postgres
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5433/postgres
 
-#flai é o rótulo
-#quarkus.datasource.flai.driver=org.postgresql.Driver
-#quarkus.datasource.flai.username=marketplace
-#quarkus.datasource.flai.password=marketplace
+#quarkus.datasource.url=jdbc:postgresql://localhost:5433/postgres
+quarkus.flyway.locations=db/migration
+quarkus.flyway.clean-at-start=true
+quarkus.flyway.migrate-at-start=true
 
-quarkus.datasource.flai.url=jdbc:postgresql://localhost:5433/postgres
-quarkus.flyway.flai.locations=db/migration
-quarkus.flyway.flai.clean-at-start=true
-quarkus.flyway.flai.migrate-at-start=true
+#ActiveMQ Artemis
+amqp-port=5672
+amqp-username=admin
+amqp-password=admin
 
+
+# Configuring the outgoing channel (writing to AMQP)
+mp.messaging.incoming.restaurante-in.connector=smallrye-amqp
+mp.messaging.incoming.restaurante-in.address=restaurante
