--- a/ifood/pedido/pom.xml
+++ b/ifood/pedido/pom.xml
@@ -29,29 +29,51 @@
     </dependencies>
   </dependencyManagement>
   <dependencies>
+    
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-arc</artifactId>
     </dependency>
+    
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-resteasy</artifactId>
     </dependency>
+    
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-smallrye-jwt</artifactId>
     </dependency>
+	
+	<dependency>
+		<groupId>io.quarkus</groupId>
+		<artifactId>quarkus-mongodb-panache</artifactId>
+    </dependency>
+    
+	<dependency>
+		<groupId>io.quarkus</groupId>
+		<artifactId>quarkus-resteasy-jsonb</artifactId>
+	</dependency>
+
+	<dependency>
+		<groupId>io.quarkus</groupId>
+		<artifactId>quarkus-smallrye-openapi</artifactId>
+	</dependency>
+    
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-junit5</artifactId>
       <scope>test</scope>
     </dependency>
+    
     <dependency>
       <groupId>io.rest-assured</groupId>
       <artifactId>rest-assured</artifactId>
       <scope>test</scope>
     </dependency>
+    
   </dependencies>
+  
   <build>
     <plugins>
       <plugin>
