--- a/ifood/marketplace/pom.xml
+++ b/ifood/marketplace/pom.xml
@@ -76,6 +76,11 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-smallrye-reactive-messaging-amqp</artifactId>
     </dependency>
+    
+	<dependency>
+        <groupId>io.quarkus</groupId>
+        <artifactId>quarkus-smallrye-reactive-messaging-kafka</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>io.quarkus</groupId>
