--- a/ifood/marketplace/src/main/resources/application.properties
+++ b/ifood/marketplace/src/main/resources/application.properties
@@ -14,11 +14,15 @@ quarkus.flyway.clean-at-start=true
 quarkus.flyway.migrate-at-start=true
 
 #ActiveMQ Artemis
-amqp-port=5672
-amqp-username=admin
-amqp-password=admin
+#amqp-port=5672
+#amqp-username=admin
+#amqp-password=admin
 
 
 # Configuring the outgoing channel (writing to AMQP)
 mp.messaging.incoming.restaurante-in.connector=smallrye-amqp
 mp.messaging.incoming.restaurante-in.address=restaurante
+
+# Configurando o Kafka
+mp.messaging.outgoing.pedidos.connector=smallrye-kafka
+mp.messaging.outgoing.pedidos.value.serializer=io.quarkus.kafka.client.serialization.ObjectMapperSerializer
