--- a/ampq-kafka-quickstart/mensageria-kafka/pom.xml
+++ b/ampq-kafka-quickstart/mensageria-kafka/pom.xml
@@ -2,9 +2,9 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>br.com.roberto.ifood</groupId>
-  <artifactId>pedido</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <groupId>br.com.roberto</groupId>
+  <artifactId>mensageria-kafka</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
   <properties>
     <compiler-plugin.version>3.8.1</compiler-plugin.version>
     <maven.compiler.parameters>true</maven.compiler.parameters>
@@ -14,7 +14,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
     <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
-    <quarkus.platform.version>2.1.1.Final</quarkus.platform.version>
+    <quarkus.platform.version>2.1.3.Final</quarkus.platform.version>
     <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
   </properties>
   <dependencyManagement>
@@ -29,56 +29,37 @@
     </dependencies>
   </dependencyManagement>
   <dependencies>
-    
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-smallrye-openapi</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-smallrye-reactive-messaging-kafka</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-resteasy-jackson</artifactId>
+    </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-arc</artifactId>
     </dependency>
-    
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-resteasy</artifactId>
     </dependency>
-    
-    <dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-smallrye-jwt</artifactId>
-    </dependency>
-	
-	<dependency>
-		<groupId>io.quarkus</groupId>
-		<artifactId>quarkus-mongodb-panache</artifactId>
-    </dependency>
-    
-	<dependency>
-		<groupId>io.quarkus</groupId>
-		<artifactId>quarkus-resteasy-jsonb</artifactId>
-	</dependency>
-
-	<dependency>
-		<groupId>io.quarkus</groupId>
-		<artifactId>quarkus-smallrye-openapi</artifactId>
-	</dependency>
-	
-	<dependency>
-        <groupId>io.quarkus</groupId>
-        <artifactId>quarkus-smallrye-reactive-messaging-kafka</artifactId>
-    </dependency>
-    
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-junit5</artifactId>
       <scope>test</scope>
     </dependency>
-    
     <dependency>
       <groupId>io.rest-assured</groupId>
       <artifactId>rest-assured</artifactId>
       <scope>test</scope>
     </dependency>
-    
   </dependencies>
-  
   <build>
     <plugins>
       <plugin>
