--- a/ifood/marketplace/src/main/resources/application.properties
+++ b/ifood/marketplace/src/main/resources/application.properties
@@ -20,8 +20,8 @@ quarkus.flyway.migrate-at-start=true
 
 
 # Configuring the outgoing channel (writing to AMQP)
-mp.messaging.incoming.restaurante-in.connector=smallrye-amqp
-mp.messaging.incoming.restaurante-in.address=restaurante
+#mp.messaging.incoming.restaurante-in.connector=smallrye-amqp
+#mp.messaging.incoming.restaurante-in.address=restaurante
 
 # Configurando o Kafka
 mp.messaging.outgoing.pedidos.connector=smallrye-kafka
