--- a/ifood/pedido/pom.xml
+++ b/ifood/pedido/pom.xml
@@ -65,6 +65,17 @@
         <artifactId>quarkus-smallrye-reactive-messaging-kafka</artifactId>
     </dependency>
     
+     <dependency>
+        <groupId>org.elasticsearch.client</groupId>
+        <artifactId>elasticsearch-rest-high-level-client</artifactId>
+        <version>7.6.2</version>
+    </dependency>
+    
+    <dependency>
+	    <groupId>io.quarkus</groupId>
+	    <artifactId>quarkus-resteasy-jsonb</artifactId>
+	</dependency>
+    
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-junit5</artifactId>
